--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,18 @@
 version: "3.7"
 services:
-  # App backend service
   app-server:
-    # Configuration for building the docker image for the backend service
     image: final-year-project:latest
     ports:
       - 8085:8080
     restart: always
     depends_on:
-      - db # This service depends on mongo. Start that first.
-    environment: # Pass environment variables to the service
+      - db
+    environment:
       DB_HOST: "mongodb://db"
-    networks: # Networks to join (Services on the same network can communicate with each other using their name)
+    networks:
       - backend
       - frontend
 
-    # Frontend Service
   app-client:
     image: frontendfyp:latest
     ports:
@@ -25,7 +22,6 @@ services:
       - app-server
     networks:
       - frontend
-      # Database Service (Mysql)
   db:
     image: mongo:latest
     ports:
@@ -33,18 +29,14 @@ services:
     restart: always
     environment:
       MONGO_INITDB_DATABASE: fypdb
-      MONGO_INITDB_ROOT_USERNAME: user
-      MONGO_INITDB_ROOT_PASSWORD: admin
     volumes:
       - db-data:/data/db 
     networks:
       - backend
 
-# Volumes
 volumes:
   db-data:
 
-# Networks to be created to facilitate communication between containers
 networks:
   backend:
   frontend:
