--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.data.mongodb.host=db
 spring.data.mongodb.port=27017
+
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=root
+#spring.data.mongodb.database=fypdb
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
