--- a/ui/package.json
+++ b/ui/package.json
@@ -10,12 +10,15 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.11.1",
+    "axios": "^0.21.1",
     "feather-icons": "^4.28.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-reveal": "^1.2.2"
   }
 }
