--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.11.1",
     "axios": "^0.21.1",
     "feather-icons": "^4.28.0",
+    "mdbreact": "^5.0.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
