--- a/ui/package.json
+++ b/ui/package.json
@@ -14,9 +14,12 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.11.1",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "feather-icons": "^4.28.0",
     "mdbreact": "^5.0.1",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.17",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.4.3",
