Added A working register page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@
 spring.data.mongodb.database=fypdb
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+
+# App Properties
+bezkoder.app.jwtSecret= ourSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
