--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.5",
+    "react-recaptcha": "^2.3.10",
     "react-recaptcha-google": "^1.1.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
