--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.0.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@react-latest-ui/react-sticky-notes": "^0.2.6",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
