--- a/ui/package.json
+++ b/ui/package.json
@@ -19,7 +19,9 @@
     "express": "^4.17.1",
     "feather-icons": "^4.28.0",
     "firebase": "^8.2.5",
+    "jquery": "^3.5.1",
     "mdbreact": "^5.0.1",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.17",
     "react": "^17.0.1",
@@ -33,6 +35,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-stickies": "0.0.16",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2",
     "twin.macro": "^2.1.0",
