--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.11.1",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "feather-icons": "^4.28.0",
@@ -67,7 +68,9 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "react-quill": "^1.3.5",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "socket.io": "^3.1.1"
   }
 }
