--- a/ui/package.json
+++ b/ui/package.json
@@ -15,11 +15,13 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.11.1",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
+    "dhtmlx-scheduler": "^5.3.11",
     "express": "^4.17.1",
     "feather-icons": "^4.28.0",
     "firebase": "^8.2.5",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "mdbreact": "^5.0.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
