--- a/ui/package.json
+++ b/ui/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^1.3.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@react-latest-ui/react-sticky-notes": "^0.2.6",
@@ -16,11 +18,13 @@
     "antd": "^4.11.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chakra-ui": "^0.3.9",
     "cors": "^2.8.5",
     "dhtmlx-scheduler": "^5.3.11",
     "express": "^4.17.1",
     "feather-icons": "^4.28.0",
     "firebase": "^8.2.5",
+    "framer-motion": "^3.10.0",
     "jquery": "^3.6.0",
     "mdbreact": "^5.0.1",
     "moment": "^2.29.1",
@@ -32,6 +36,7 @@
     "react-bootstrap-dropdown-menu": "^1.1.23",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.5",
+    "react-icons": "^4.2.0",
     "react-messenger-customer-chat": "^0.8.0",
     "react-recaptcha": "^2.3.10",
     "react-recaptcha-google": "^1.1.1",
