--- a/ui/package.json
+++ b/ui/package.json
@@ -43,6 +43,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-search-field": "^1.2.0",
     "react-stickies": "0.0.16",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2",
