--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#spring.data.mongodb.host=db
+spring.data.mongodb.host=db
 #spring.data.mongodb.port=27017
 
 spring.data.mongodb.database=fypdb
 spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=localhost
 spring.data.mongodb.repositories.enabled=true
 #
 # App Properties
