--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,8 @@
     "@ant-design/icons": "^4.5.0",
     "@babel/plugin-syntax-jsx": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
+    "@capacitor/cli": "^3.0.0-rc.0",
+    "@capacitor/core": "^3.0.0-rc.0",
     "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/react": "^1.3.3",
     "@emotion/react": "^11.1.5",
@@ -18,9 +20,9 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.11.1",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "chakra-ui": "^0.3.9",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dhtmlx-scheduler": "^5.3.11",
     "express": "^4.17.1",
@@ -31,6 +33,7 @@
     "mdbreact": "^5.0.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "nodejs": "^0.0.0",
     "nodemailer": "^6.4.17",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
